--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@
 }
 
 h3 {
-    font-size: 1,25em;
+    font-size: 1,25rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+
+   }
 
 .grid-container {
     display: grid;
@@ -18,18 +19,43 @@ h3 {
     grid-area: header;  
     background-color: rgb(51, 57, 64);
     color: rgb(236, 236, 236);
-    padding: 20px;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    
 }
 
 .header__title {
     display: inline;
-    }
+            }
+
+     .fa {
+    padding-left: 5rem;
+            }
 
 .header__search {
     display: inline;
     float: right;
 }
+.search__input {
+   border: solid rgb(51, 57, 64) 1px;
+   border-radius: 4px 0px 4px 0px;
+    padding: 0.375rem 0.75rem;
+    font-size: 1.2rem;
+    transition: all 0.15s;
+}
 
+input:focus {
+    border: solid rgb(128, 189, 255);  
+}
+
+.search__btn {
+    color: white;
+    background-color: rgb(0, 123, 255);
+     border-radius: 0px 4px 4px 0px;
+       
+}
 
 .aside {
     grid-area: nav;   
