--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,16 @@
 * {
     box-sizing: border-box;
 }
+h1 {
+font-size: 2rem;
+color: rgb(0, 0, 0);
+}
 
 h3 {
     font-size: 1,25rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
    }
-
-.grid-container {
-    display: grid;
-    grid-template-areas: 'header header header header header'
-                        'nav section section section section';
-    grid-gap: 10px;
-}
 
 .header--dark {
     grid-area: header;  
@@ -23,8 +20,7 @@ h3 {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-right: 5px;
-    
-}
+   }
 
 .header__title {
     display: inline;
@@ -56,11 +52,69 @@ input:focus {
      border-radius: 0px 4px 4px 0px;
        
 }
+.main {
+   display: flex 
+}
 
 .aside {
-    grid-area: nav;   
+   flex: 30%;
 }
 
 .content {
-    grid-area: section; 
+    flex: 70%;
+}
+
+.main__nav {
+    background-color: rgb(33, 37, 41);
+    padding-bottom: 7rem;
+}
+.nav__ul {
+    color: rgb(92, 86, 86);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
+}
+
+.nav__ul li {
+    padding-top: 2rem;
+    font-size: 1.1rem;
+}
+
+.main__breadcrumb {
+    background-color: rgb(233, 236, 239);
+    border-radius: 0.25rem;
+    padding: 1rem 1.5rem;
+    max-width: 100%;
+}
+
+.main__cards {
+    display: flex;
+    color: white;
+}
+
+.main__card--blue {
+    background-color: rgb(0, 123, 255);
+    border-radius: 0.25rem;
+    max-width: 22%;
+    padding: 0.5rem;
+}
+
+.main__card--yellow {
+    background-color: rgb(236, 188, 28);
+    border-radius: 0.25rem;
+    max-width: 22%;
+    padding: 0.5rem;
+}
+
+.main__card--green {
+    background-color: rgb(13, 238, 80);
+    border-radius: 0.25rem;
+    max-width: 22%;
+    padding: 0.5rem;
+}
+
+.main__card--red {
+    background-color: rgb(236, 17, 17);
+    border-radius: 0.25rem;
+    max-width: 22%;
+    padding: 0.5rem;
 }
