--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+}
+
+
 h1 {
 font-size: 2rem;
 color: rgb(0, 0, 0);
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h3 {
@@ -13,7 +20,7 @@ h3 {
    }
 
 .header--dark {
-    grid-area: header;  
+    display: flex;
     background-color: rgb(51, 57, 64);
     color: rgb(236, 236, 236);
     padding-left: 20px;
@@ -24,15 +31,16 @@ h3 {
 
 .header__title {
     display: inline;
-            }
+                }
 
-     .fa {
-    padding-left: 5rem;
+    .fa {
+padding-left: 5rem;
             }
 
 .header__search {
     display: inline;
     float: right;
+   
 }
 .search__input {
    border: solid rgb(51, 57, 64) 1px;
@@ -52,17 +60,19 @@ input:focus {
      border-radius: 0px 4px 4px 0px;
        
 }
-.main {
-   display: flex 
+.main-container {
+ display: flex; 
+  background-color: lightcoral;
+  flex-wrap: wrap;
 }
 
-.aside {
-   flex: 30%;
+.aside2 {
+   flex: 20%;
 }
 
-.content {
-    flex: 70%;
-}
+.section2 {
+    flex: 80%;
+    }
 
 .main__nav {
     background-color: rgb(33, 37, 41);
@@ -94,27 +104,68 @@ input:focus {
 .main__card--blue {
     background-color: rgb(0, 123, 255);
     border-radius: 0.25rem;
-    max-width: 22%;
+    flex: 22%;
     padding: 0.5rem;
+  }
+
+
+  .main__card main__card--blue card__top: {
+
+}
+
+.main__card main__card--blue card__bottom: {
+    
 }
 
 .main__card--yellow {
-    background-color: rgb(236, 188, 28);
+    background-color: rgb(255, 193, 7);
     border-radius: 0.25rem;
-    max-width: 22%;
+    flex: 22%;
     padding: 0.5rem;
+   
 }
+
+
+.main__card main__card--yellow card__top: {
+    
+}
+
+.main__card main__card--yellow card__bottom: {
+    
+}
+
+
 
 .main__card--green {
-    background-color: rgb(13, 238, 80);
+    background-color: rgb(40, 167, 69);
     border-radius: 0.25rem;
-    max-width: 22%;
+    flex: 22%;
     padding: 0.5rem;
+  
 }
 
+.main__card main__card--green card__top: {
+
+}
+
+.main__card main__card--green card__bottom: {
+    
+}
+
+
+
 .main__card--red {
-    background-color: rgb(236, 17, 17);
+    background-color: rgb(220, 53, 69);
     border-radius: 0.25rem;
-    max-width: 22%;
+    flex: 22%;
     padding: 0.5rem;
+ 
+}
+
+.main__card main__card--red card__top: {
+
+}
+
+.main__card main__card--red card__bottom: {
+    
 }
