--- a/css/style.css
+++ b/css/style.css
@@ -14,52 +14,60 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h3 {
-    font-size: 1,25rem;
+    font-size: 1,25rem;                    /* Kötelező */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
    }
 
 .header--dark {
-    display: flex;
-    background-color: rgb(51, 57, 64);
-    color: rgb(236, 236, 236);
-    padding-left: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 5px;
+    
+    background-color: rgb(51, 57, 64);   /* Kötelező */
+    color: rgb(236, 236, 236);              /* Kötelező */
+    line-height: 3.5rem;
+   
    }
 
 .header__title {
-    display: inline;
+    display: inline;                        /* Kötelező */
+    padding-left: 1.5rem;
                 }
 
-    .fa {
-padding-left: 5rem;
+    .fa.fa-bars{
+padding-left: 8rem;
+color: rgb(92, 86, 86);
             }
 
 .header__search {
-    display: inline;
+    display: inline;                        /* Kötelező */
     float: right;
+    padding-right: 1.5rem;
    
 }
 .search__input {
-   border: solid rgb(51, 57, 64) 1px;
-   border-radius: 4px 0px 4px 0px;
-    padding: 0.375rem 0.75rem;
-    font-size: 1.2rem;
-    transition: all 0.15s;
+   border: solid rgb(51, 57, 64) 1px; 
+   border-radius: 4px 0px 4px 0px;          /* Kötelező */
+    padding: 0.375rem 0.75rem;              /* Kötelező */
+    font-size: 1.2rem;                       /* Kötelező */
+    transition: all 0.15s;                     /* Kötelező */
 }
 
-input:focus {
-    border: solid rgb(128, 189, 255);  
+.search__input:focus {
+    border: solid rgb(128, 189, 255);     /* Kötelező */
 }
 
 .search__btn {
     color: white;
-    background-color: rgb(0, 123, 255);
-     border-radius: 0px 4px 4px 0px;
-       
+    background-color: rgb(0, 123, 255);   /* Kötelező */
+    border-radius: 0px 4px 4px 0px;
+    font-size: 1.2rem;  
+    transform: translate(-0.75rem, 0);   
 }
+.fa.fa-search {
+    font-size: 1.2rem;
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+}
+
 .main-container {
  display: flex; 
   background-color: lightcoral;
