--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,7 @@ h3 {
     background-color: rgb(51, 57, 64);   /* Kötelező */
     color: rgb(236, 236, 236);              /* Kötelező */
     line-height: 3.5rem;
-   
-   }
+      }
 
 .header__title {
     display: inline;                        /* Kötelező */
@@ -68,33 +67,50 @@ color: rgb(92, 86, 86);
     padding-bottom: 0.375rem;
 }
 
+
+
+
+
 .main-container {
  display: flex; 
-  background-color: lightcoral;
-  flex-wrap: wrap;
+flex-wrap: wrap;
 }
 
 .aside2 {
    flex: 20%;
 }
 
+.aside {
+    height: 100%;
+   }
+
 .section2 {
     flex: 80%;
-    }
+        }
 
 .main__nav {
-    background-color: rgb(33, 37, 41);
-    padding-bottom: 7rem;
+    background-color: rgb(33, 37, 41); /* Kötelező */
+  
 }
 .nav__ul {
     color: rgb(92, 86, 86);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  
+    padding-bottom: 10rem;
 }
 
 .nav__ul li {
-    padding-top: 2rem;
-    font-size: 1.1rem;
+    padding-bottom: 4rem;
+    font-size: 1.5rem;
+    list-style-type: none;
+}
+
+.nav__ul span {
+    padding-left: 1rem;
+}
+
+.fa.fa-angle-right {
+    float: right;
+    padding-right: 2rem;
 }
 
 .main__breadcrumb {
