--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 
 
 h1 {
-font-size: 2rem;
+font-size: 3rem;
 color: rgb(0, 0, 0);
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -23,7 +23,7 @@ h3 {
     
     background-color: rgb(51, 57, 64);   /* Kötelező */
     color: rgb(236, 236, 236);              /* Kötelező */
-    line-height: 3.5rem;
+    line-height: 5rem;
       }
 
 .header__title {
@@ -69,8 +69,6 @@ color: rgb(92, 86, 86);
 
 
 
-
-
 .main-container {
  display: flex; 
 flex-wrap: wrap;
@@ -113,11 +111,25 @@ flex-wrap: wrap;
     padding-right: 2rem;
 }
 
+.content {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.dash {
+    color: rgb(236, 236, 236); 
+}
+
 .main__breadcrumb {
-    background-color: rgb(233, 236, 239);
-    border-radius: 0.25rem;
-    padding: 1rem 1.5rem;
+    background-color: rgb(233, 236, 239);   /* Kötelező */
+    border-radius: 0.25rem;                     /* Kötelező */
+    padding-top: 1rem;                    /* Kötelező */
+    padding-bottom: 1rem;                       /* Kötelező */
+    padding-left: 1.5rem;  
     max-width: 100%;
+    font-size: 1.5rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(92, 86, 86);;
 }
 
 .main__cards {
