--- a/css/style.css
+++ b/css/style.css
@@ -129,13 +129,33 @@ flex-wrap: wrap;
     max-width: 100%;
     font-size: 1.5rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: rgb(92, 86, 86);;
+    color: rgb(92, 86, 86);
+    margin-bottom: 2rem;
 }
 
 .main__cards {
     display: flex;
     color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   
 }
+
+.card__top {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 2rem;
+    font-size: 1.5rem;
+}
+
+.card__bottom {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 2rem; 
+    border-top: solid 0.2px;
+    font-size: 1.3rem;
+}
+
+
 
 .main__card--blue {
     background-color: rgb(0, 123, 255);
@@ -158,7 +178,7 @@ flex-wrap: wrap;
     border-radius: 0.25rem;
     flex: 22%;
     padding: 0.5rem;
-   
+    margin-left: 2rem;
 }
 
 
@@ -177,6 +197,8 @@ flex-wrap: wrap;
     border-radius: 0.25rem;
     flex: 22%;
     padding: 0.5rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
   
 }
 
