--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,6 @@ color: rgb(92, 86, 86);
     padding-bottom: 0.375rem;
 }
 
-
-
 .main-container {
  display: flex; 
 flex-wrap: wrap;
@@ -76,11 +74,11 @@ flex-wrap: wrap;
 
 .aside2 {
    flex: 20%;
-}
+  }
 
 .aside {
     height: 100%;
-   }
+       }
 
 .section2 {
     flex: 80%;
@@ -94,6 +92,9 @@ flex-wrap: wrap;
     color: rgb(92, 86, 86);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-bottom: 10rem;
+    max-width: 100%;
+    margin-top: 0;
+    padding-top: 3rem;
 }
 
 .nav__ul li {
@@ -150,7 +151,7 @@ flex-wrap: wrap;
     padding-top: 1rem;
     padding-bottom: 1rem;
     padding-left: 2rem; 
-    border-top: solid 0.1px rgb(85, 82, 82);
+    border-top: solid 2px rgba(41, 38, 38, 0.1);
     font-size: 1.3rem;
 }
 
